fix: scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,38 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
+
+:root {
+  --primary: rgb(228 228 231);
+  --secondary: rgba(130 87 230);
+}
 
 body {
   background-color: rgb(244 244 245);
 }
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--secondary) var(--primary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  overflow-y: scroll;
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  overflow-y: scroll;
+  background: var(--primary);
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+  border-radius: 14px;
+  border: 3px solid var(--primary);
+}
+
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
